--- a/index.html
+++ b/index.html
@@ -157,34 +157,34 @@
                     <h2 class="titulo text-center py-5">Portafolio</h2>
                     <div class="row galeria">
                         <!---imagen1-->
-                        <div class="contenedor-imagen mb-4 col-4">
-                            <a href="#">
+                        <div class="contenedor-imagen mb-4 col-6 col-lg-4">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#modal-galeria">
                                 <img src="img2/img.jpg" class="d-block w-100" alt="">
                             </a>
                         </div>
                         <!--imagen2-->
-                        <div class="contenedor-imagen mb-4 col-8">
-                            <a href="#">
+                        <div class="contenedor-imagen mb-4 co col-12 col-lg-8">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#modal-galeria">
                                 <img src="img2/img1.png" class="d-block w-100" alt="">
                             </a>
                         </div>
 
                         <!--imagen3-->
                         <div class="contenedor-imagen mb-4 col-8 me-0">
-                            <a href="#">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#modal-galeria">
                                 <img src="img2/img6.jpg" class="d-block w-100" alt="">
                             </a>
                         </div>
 
                         <!--imagen4-->
-                        <div class="contenedor-imagen mb-4 col-4">
+                        <div class="contenedor-imagen mb-4 col-12 col-lg-4">
                             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" target="_blank">
                                 <img src="img2/img4.jpg" class="d-block w-100" alt="">
                         </div>
 
                         <!--imagen5-->
                         <div class="contenedor-imagen mb-4 col-4">
-                            <a href="#">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#modal-galeria">
                                 <img src="img2/img5.jpg" class="d-block w-100" alt="">
                             </a>
                         </div>
@@ -192,30 +192,199 @@
 
                         <!--imagen6-->
                         <div class="contenedor-imagen mb-4 col-4">
-                            <a href="#">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#modal-galeria">
                                 <img src="img2/img3.jpeg" class="d-block w-100" alt="">
                             </a>
                         </div>
 
                         <!--imagen7-->
                         <div class="contenedor-imagen mb-4 col-4">
-                            <a href="#">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#modal-galeria">
                                 <img src="img2/img2.jpg" class="d-block w-100" alt="">
                             </a>
                         </div>
+                    </div>
 
 
+                    <!---Ventana modal-->
+                    <div 
+                        class="modal fade" 
+                        id="modal-galeria" 
+                        tabindex="-1"
+                        aria-labelledby="modal-galeria"
+                        aria-hidden="true">
 
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                <img src="img2/img.jpg" id="imagen-modal" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!---Acerca De-->
+            <div class="row acerca-de align-items-center px-4 mb-5">
+                <div class="col-12 col-lg-4 foto text-center">
+                    <img src="images/foto.png" class="rounded-circle mb-3" alt="">
+                    <p class="nombre">Cesar Mera</p>
+                </div>
 
+                <div class="col-12 col-lg-8 info">
+                    <h2 class="titulo text-lg-center-start">Acerca de</h2>
+                    <p class="resumen">Lorem ipsum dolor sit amet consectetur, 
+                        adipisicing elit. Possimus, 
+                        assumenda ad obcaecati harum alias facilis quasi quibusdam similique 
+                        nemo a inventore? Beatae minus officia qui est, ratione expedita 
+                        magnam quidem?
+                    </p>
+                    <p class="label">HTML</p>
+                    <div class="progress mb-3">
+                        <div 
+                            class="progress-bar text-center" 
+                            style="width: 95%;"
+                            role="progressbar"
+                            aria-valuemin="0"
+                            aria-valuemax="100"
+                            aria-valuenow="95">
+                            95%
+                        </div>
+                    </div>
 
+                    <p class="label">CSS</p>
+                    <div class="progress mb-3">
+                        <div 
+                            class="progress-bar text-center" 
+                            style="width: 80%;"
+                            role="progressbar"
+                            aria-valuemin="0"
+                            aria-valuemax="100"
+                            aria-valuenow="80">
+                            80%
+                        </div>
+                    </div>
+
+                    <p class="label">JavaScript</p>
+                    <div class="progress mb-3">
+                        <div 
+                            class="progress-bar text-center" 
+                            style="width: 70%;"
+                            role="progressbar"
+                            aria-valuemin="0"
+                            aria-valuemax="100"
+                            aria-valuenow="70">
+                            70%
+                        </div>
+                    </div>
+
+                    <p class="label">JAVA</p>
+                    <div class="progress mb-3">
+                        <div 
+                            class="progress-bar text-center" 
+                            style="width: 75%;"
+                            role="progressbar"
+                            aria-valuemin="0"
+                            aria-valuemax="100"
+                            aria-valuenow="75">
+                            75%
+                        </div>
                     </div>
 
                 </div>
+
             </div>
+
+            <!---Formulario De Contacto-->
+            <div class="row contacto justify-content-center py-5 mb-5">
+                <div class="col-12 col-lg-8">
+                    <h2 class="titulo">Contacto</h2>
+                    <form action="" class="formulario">
+                        <div class="row">
+                            <div class="col-12 col-lg-6">
+                                <div class="form-floating mb-3">
+                                    <input 
+                                    type="text" 
+                                    name="nombre"
+                                    id="nombre"
+                                    class="form-control"
+                                    placeholder="Elbio Lador"
+                                    >
+                                    <label for="nombre">Nombre</label>
+                                </div>
+                            </div>
+
+                            <div class="col-12 col-lg-6">
+                                <div class="form-floating mb-3">
+                                    <input 
+                                    type="email" 
+                                    name="correo"
+                                    id="correo"
+                                    class="form-control"
+                                    placeholder="correo@correo.com"
+                                    >
+                                    <label for="nombre">Correo</label>
+                                </div>
+                            </div>
+
+                            <div class="col-12 ">
+                                <div class="form-floating mb-3">
+                                    <textarea 
+                                        name="mensaje" 
+                                        id="mensaje" 
+                                        class="form-control"
+                                        placeholder="Mensaje">
+                                    </textarea>
+                                    <label for="mensaje">Mensaje</label>
+                                </div>
+                                <div class="d-flex justify-content-center">
+                                    <button class="boton" type="submit">Enviar</button>
+                                </div>
+                            </div>
+
+                        </div>
+                    </form>
+
+                </div>
+
+
+            </div>
+
         </div>
     </main>
 
+<footer>
+    <div class="container">
+        <div class="row redes-sociales justify-content-center">
+            <div class="col-auto">
+                <a href="https://www.linkedin.com/in/cesar-mera-8a4683135/" target="_blank" 
+                                    class="
+                                    icono 
+                                    link 
+                                    d-inline-flex 
+                                    align-items-center
+                                    justify-content-center">
 
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+                                        <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
+                                    </svg>
+                </a>
+
+                <a href="https://github.com/CesarMera" target="_blank" 
+                                    class="
+                                    icono 
+                                    git 
+                                    d-inline-flex 
+                                    align-items-center
+                                    justify-content-center">
+
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                                        <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                                    </svg>
+                </a>
+            </div>
+
+        </div>
+    </div>
+</footer>
 
 
 
